--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,10 @@
-appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
-appnope==0.1.4
-asttokens==2.4.1
-attrs==23.2.0
-backcall==0.2.0
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1705564648255/work
-bleach==6.1.0
-blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1698890160476/work
-Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1695989934239/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1707022139797/work/certifi
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1692311806742/work
-dash @ file:///home/conda/feedstock_root/build_artifacts/dash_1706769713035/work
-dash-bootstrap-components==1.5.0
-dash-bootstrap-templates==1.1.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-executing==2.0.1
-fastjsonschema==2.19.1
-Flask @ file:///home/conda/feedstock_root/build_artifacts/flask_1707043907952/work
-frozendict @ file:///Users/runner/miniforge3/conda-bld/frozendict_1704100358981/work
+dash==2.15.0
+dash_bootstrap_components==1.5.0
+dash_bootstrap_templates==1.1.2
+dash_core_components==2.0.0
+dash_html_components==2.0.0
+numpy==1.26.4
+pandas==2.2.1
+plotly==5.19.0
+yfinance==0.2.37
 gunicorn==21.2.0
-html5lib @ file:///home/conda/feedstock_root/build_artifacts/html5lib_1592930327044/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1701026962277/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1703269254275/work
-ipython==8.12.3
-itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1648147185463/work
-jedi==0.19.1
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1704966972576/work
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyterlab_pygments==0.3.0
-lxml @ file:///Users/runner/miniforge3/conda-bld/lxml_1704724323913/work
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1706900163039/work
-matplotlib-inline==0.1.6
-mistune==3.0.2
-multitasking @ file:///home/conda/feedstock_root/build_artifacts/multitasking_1622493113162/work
-nbclient==0.9.0
-nbconvert==7.16.1
-nbformat==5.9.2
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1707225421156/work/dist/numpy-1.26.4-cp312-cp312-macosx_11_0_arm64.whl#sha256=011d57633d659db8280a5811d62d0c5a615719a6d7cbd46a04f6ffce0c2a7db3
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
-pandas @ file:///Users/runner/miniforge3/conda-bld/pandas_1708708709703/work
-pandocfilters==1.5.1
-parso==0.8.3
-peewee @ file:///Users/runner/miniforge3/conda-bld/peewee_1707154116768/work
-pexpect==4.9.0
-pickleshare==0.7.5
-pipreqs==0.5.0
-platformdirs==4.2.0
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1708020413888/work
-prompt-toolkit==3.0.43
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.17.2
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
-pyzmq==25.1.2
-referencing==0.33.0
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
-retrying==1.3.3
-rpds-py==0.18.0
-setuptools==69.1.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1693929250441/work
-stack-data==0.6.3
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1692026804430/work
-tinycss2==1.2.1
-tornado==6.4
-traitlets==5.14.1
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1708904622550/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1708239446578/work
-wcwidth==0.2.13
-webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1694681268211/work
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1698235201373/work
-wheel==0.42.0
-yarg==0.1.9
-yfinance @ file:///home/conda/feedstock_root/build_artifacts/yfinance_1708875752910/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
