--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 dash==2.15.0
-dash_bootstrap_components==1.5.0
-dash_bootstrap_templates==1.1.2
-dash_core_components==2.0.0
-dash_html_components==2.0.0
-numpy==1.26.4
+dash_bootstrap_components
+dash_bootstrap_templates
+dash_core_components
+dash_html_components
+numpy
 pandas==2.2.1
 plotly==5.19.0
 yfinance==0.2.37
